--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,7 +17,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Install dependencies
-      run: sudo apt-get update && sudo apt-get install -y libgirepository1.0-dev
+      run: sudo apt-get update && sudo apt-get install -y libgtk-4-dev
 
     - name: Set up Go
       uses: actions/setup-go@v4
